# torrentui

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tmuxp.yml  Cargo.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
src/: actions.rs  app.rs  app_state.rs  errors.rs  key_mode.rs  main.rs  mode.rs  settings.rs  tui.rs
src/settings/: defaults.rs  keybindings.rs
src/settings/keybindings/: test_utils.rs
