[package]
name = "torrentui"
version = "0.1.0"
authors = ["Sergei Shavlovskii <fucaluca@proton.me>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5" }
crossterm = { version = "0.29.0" }
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"

[profile.dev]
debug = true
opt-level = 0
