[package]
name = "torrentui"
version = "0.1.0"
authors = ["Sergei Shavlovskii <fucaluca@proton.me>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5" }
config = "0.15.19"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.41"

[profile.dev]
debug = true
opt-level = 0

[dev-dependencies]
pretty_assertions = "1.4.1"
